force-app/main/default/objects/Conference_Booking__c/Conference_Booking__c.object-meta.xml
<CustomObject>
    <label>Conference Booking</label>
    <nameField>
        <label>Conference Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conference Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>