force-app/main/default/objects/Conference_Booking__c/fields/Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Count__c</fullName>
    <label>Attendee Count</label>
    <length>120</length>
    <type>Text</type>
</CustomField>