force-app/main/default/objects/Conference_Booking__c/fields/Conference_Name__c.field-meta.xml
<CustomField>
    <fullName>Conference_Name__c</fullName>
    <label>Conference Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>