force-app/main/default/objects/Conference_Booking__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Tokyo</fullName>
            </value>
            <value>
                <fullName>Berlin</fullName>
            </value>
            <value>
                <fullName>required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>