force-app/main/default/objects/Conference_Booking__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>120</length>
    <type>Text</type>
</CustomField>