force-app/main/default/objects/Conference_Booking__c/fields/Organizer_Email__c.field-meta.xml
<CustomField>
    <fullName>Organizer_Email__c</fullName>
    <label>Organizer Email</label>
    <length>120</length>
    <type>Text</type>
</CustomField>