force-app/main/default/objects/Conference_Booking__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <length>120</length>
    <type>Text</type>
</CustomField>